Added two pointers solution to Three Sum