@@ -12,9 +12,9 @@ class ThreeSumTest {
     @Test
     void testExampleCase() {
         int[] nums = {-1, 0, 1, 2, -1, -4};
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(-1, -1, 2),
-                Arrays.asList(-1, 0, 1)
+        List<List<Integer>> expected = List.of(
+                List.of(-1, -1, 2),
+                List.of(-1, 0, 1)
         );
         assertEquals(expected, solver.threeSum(nums));
     }
@@ -22,15 +22,15 @@ class ThreeSumTest {
     @Test
     void testNoSolution() {
         int[] nums = {1, 2, 3, 4};
-        List<List<Integer>> expected = Arrays.asList();
+        List<List<Integer>> expected = List.of();
         assertEquals(expected, solver.threeSum(nums));
     }
 
     @Test
     void testAllZeroes() {
         int[] nums = {0, 0, 0, 0};
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(0, 0, 0)
+        List<List<Integer>> expected = List.of(
+                List.of(0, 0, 0)
         );
         assertEquals(expected, solver.threeSum(nums));
     }
@@ -38,13 +38,12 @@ class ThreeSumTest {
     @Test
     void testLargeRangeOfNumbers() {
         int[] nums = {-4, -2, -1, 0, 1, 2, 3, 4};
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(-4, 0, 4),
-                Arrays.asList(-4, 1, 3),
-                Arrays.asList(-4, 2, 2),
-                Arrays.asList(-2, -1, 3),
-                Arrays.asList(-2, 0, 2),
-                Arrays.asList(-1, 0, 1)
+        List<List<Integer>> expected = List.of(
+                List.of(-4, 0, 4),
+                List.of(-4, 1, 3),
+                List.of(-2, -1, 3),
+                List.of(-2, 0, 2),
+                List.of(-1, 0, 1)
         );
         assertEquals(expected, solver.threeSum(nums));
     }
@@ -52,10 +51,11 @@ class ThreeSumTest {
     @Test
     void testDuplicatesInResult() {
         int[] nums = {-2, 0, 1, 1, 2, -1, -1};
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(-2, 0, 2),
-                Arrays.asList(-1, -1, 2),
-                Arrays.asList(-1, 0, 1)
+        List<List<Integer>> expected = List.of(
+                List.of(-2, 0, 2),
+                List.of(-2, 1, 1),
+                List.of(-1, -1, 2),
+                List.of(-1, 0, 1)
         );
         assertEquals(expected, solver.threeSum(nums));
     }
@@ -63,12 +63,12 @@ class ThreeSumTest {
     @Test
     void testMixedPositiveAndNegativeWithZero() {
         int[] nums = {-5, -2, -1, 0, 1, 2, 3, 5};
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(-5, 0, 5),
-                Arrays.asList(-5, 2, 3),
-                Arrays.asList(-2, -1, 3),
-                Arrays.asList(-2, 0, 2),
-                Arrays.asList(-1, 0, 1)
+        List<List<Integer>> expected = List.of(
+                List.of(-5, 0, 5),
+                List.of(-5, 2, 3),
+                List.of(-2, -1, 3),
+                List.of(-2, 0, 2),
+                List.of(-1, 0, 1)
         );
         assertEquals(expected, solver.threeSum(nums));
     }
@@ -76,29 +76,29 @@ class ThreeSumTest {
     @Test
     void testArrayWithSingleNegative() {
         int[] nums = {-1};
-        List<List<Integer>> expected = Arrays.asList();
+        List<List<Integer>> expected = List.of();
         assertEquals(expected, solver.threeSum(nums));
     }
 
     @Test
     void testArrayWithSinglePositive() {
         int[] nums = {1};
-        List<List<Integer>> expected = Arrays.asList();
+        List<List<Integer>> expected = List.of();
         assertEquals(expected, solver.threeSum(nums));
     }
 
     @Test
     void testEmptyArray() {
         int[] nums = {};
-        List<List<Integer>> expected = Arrays.asList();
+        List<List<Integer>> expected = List.of();
         assertEquals(expected, solver.threeSum(nums));
     }
 
     @Test
     void testArrayWithOnlyZeroes() {
         int[] nums = {0, 0, 0, 0, 0};
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(0, 0, 0)
+        List<List<Integer>> expected = List.of(
+                List.of(0, 0, 0)
         );
         assertEquals(expected, solver.threeSum(nums));
     }
